型定義・mypy警告修正・テスト通過状態を維持

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -82,7 +82,7 @@ warn_unreachable = true
 
 # Miscellaneous strictness flags
 strict_equality = true
-strict_concatenate = true
+extra_checks = true
 
 # Configuring error messages
 show_error_context = true
