完成版: OpenRouter API + Playwright MCP統合によるサブタイトル抽出システム
- OpenRouter APIのgpt-5-mini:onlineモデルとweb検索機能を統合
- Playwright MCP（Docker版）との連携でブラウザ自動化対応
- セッションID管理による正しいMCP HTTP APIフロー実装
- GitHub issue #855を参考にしたMCPクライアント設計
- aiライブラリ、httpx、pytest、mypy、ruffによる型安全な開発環境
- 今後の方針: アニメ公式サイトクローリング・インデックス検索サービスへ転換

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,8 @@ requires-python = ">=3.10"
 dependencies = [
     "requests>=2.28.1",
     "beautifulsoup4>=4.11.1",
-    "playwright>=1.30.0"
+    "playwright>=1.30.0",
+    "mcp>=1.0.0"
 ]
 optional-dependencies = { dev = ["pytest>=7.1.2", "pytest-asyncio>=0.21.0", "mypy>=1.0.0", "types-requests>=2.28.0", "types-beautifulsoup4>=4.11.0"] }
 
@@ -104,6 +105,7 @@ warn_unused_configs = true
 module = [
     "playwright.*",
     "bs4.*",
+    "mcp.*",
 ]
 ignore_missing_imports = true
 
