--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
 		"@biomejs/biome": "^2.1.4",
 		"@types/jsdom": "^21.1.7",
 		"@types/node": "^24.2.1",
+		"@types/pg": "^8.15.5",
 		"@typescript/native-preview": "^7.0.0-dev.20250809.1",
 		"typescript": "^5.9.2"
 	},
 	"dependencies": {
 		"@mozilla/readability": "^0.6.0",
 		"jsdom": "^26.1.0",
+		"kysely": "^0.28.5",
+		"pg": "^8.16.3",
 		"playwright": "^1.54.2",
 		"robots-parser": "^3.0.1",
-		"ts-results": "^3.3.0"
+		"ts-results-es": "^6.0.0"
 	}
 }
